# ritm_annotation

./: .dockerignore  .gitignore  ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Containerfile  MANIFEST.in  Makefile  README.md  REFACTORING_README.md  check  dagger.json  flake.nix  io.github.lucasew.ritm_annotation.metainfo.xml  io.github.lucasew.ritm_annotation.yml  make_release  mise.toml  mkdocs.yml  package.nix  pyproject.toml  pytest.ini  renovate.json  requirements.txt  setup.py  update_locales
.dagger/: pyproject.toml
.dagger/src/ritm_annotation/: __init__.py  main.py
.github/: FUNDING.yml  rename_project.sh
.github/workflows/: autorelease.yaml  autorelease.yml  docker.yml  main.yml  release.yml  update-deps.yml
.jules/: CONSISTENTLY_IGNORED.md  janitor.md  sentinel.md
docs/: ARCHITECTURE.md  MIGRATION_GUIDE.md  QUICKSTART.md
examples/: web_api_example.py
ritm_annotation/: .gitignore  __main__.py  base.py  cli.py
ritm_annotation/cli/: README.md  __init__.py
ritm_annotation/cli/annotate/: __init__.py  annotator.py  canvas.py  controller.py  wrappers.py
ritm_annotation/cli/convert_to_coco/: __init__.py
ritm_annotation/cli/dataset_lint/: __init__.py
ritm_annotation/cli/finetune/: __init__.py  dataset.py  finetune.py
ritm_annotation/cli/model_info/: __init__.py  model_info.py
ritm_annotation/cli/train/: __init__.py  train.py
ritm_annotation/data/: base.py  compose.py  points_sampler.py  sample.py  transforms.py
ritm_annotation/engine/: optimizer.py  trainer.py
ritm_annotation/i18n/: ritm_annotation.pot
ritm_annotation/inference/: clicker.py  evaluation.py  utils.py
ritm_annotation/interactive_demo/: app.py  controller.py
ritm_annotation/interfaces/: __init__.py  gui_adapter.py
ritm_annotation/model/: initializer.py  is_deeplab_model.py  is_hrnet_model.py  is_model.py  losses.py  metrics.py  ops.py
ritm_annotation/models/: README.md  test_exposed_model_stuff.py
ritm_annotation/tests/: README.md  __init__.py  conftest.py  test_end_to_end.py
ritm_annotation/utils/: README.md  env.py  exp.py  i18n.py  log.py  misc.py  serialization.py  test_env.py  test_misc.py  test_serialization.py  vis.py
tests/: test_base.py  test_serialization.py
(+75 files in other folders)
