[project]
name = "ritm_annotation"
dynamic = ["version"]

dependencies = [
  "easydict",
  "albumentations",
  "pillow",
  "scipy",
  "tensorboard",
  "torchvision",
  "opencv-python-headless",
  "Cython",
  "numpy",
  "tqdm",
  "pycocotools"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "coverage",
  "ruff",
  "mypy",
  "gitchangelog",
  "mkdocs",
  "mkdocstrings"
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]


[tool.hatch.build.targets.wheel]
packages = ["ritm_annotation"]

[tool.hatch.version]
path = "ritm_annotation/VERSION"
pattern = "^(?P<version>[^$]*)"

[project.scripts]
ritm_annotation = "ritm_annotation.__main__:main"
