[project]
name = "ritm_annotation"
dynamic = ["version"]
readme = "README.md"

dependencies = [
  "easydict",

  "pillow",
  "scipy",
  "tensorboard",
  "torchvision",
  "opencv-python-headless",
  "Cython",
  "numpy",
  "tqdm",
  "pycocotools",

  "albumentations==1.4.24" # DO NOT EVER TOUCH THIS LINE
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "coverage",
  "ruff",
  "mypy",
  "gitchangelog",
  "mkdocs",
  "mkdocstrings"
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]


[tool.hatch.build.targets.wheel]
packages = ["ritm_annotation"]

[tool.hatch.version]
path = "ritm_annotation/VERSION"
pattern = "^(?P<version>[^$]*)"

[project.scripts]
ritm_annotation = "ritm_annotation.__main__:main"
