[project]
name = "ritm_annotation"
dynamic = ["version"]
readme = "README.md"

dependencies = [
  "easydict",

  "pillow",
  "scipy",
  "tensorboard",
  "torchvision",
  "opencv-python-headless",
  "numpy",
  "tqdm",
  "pycocotools",

  "albumentations==1.3.1" # DO NOT EVER TOUCH THIS LINE
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "Cython", "numpy"]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "coverage",
  "ruff",
  "mypy",
  "gitchangelog",
  "mkdocs",
  "mkdocstrings"
]

[project.scripts]
ritm_annotation = "ritm_annotation.__main__:main"


